--- a/README.adoc
+++ b/README.adoc
@@ -4,7 +4,7 @@
 
 == Contexte
 
-Le but de ce TD/TPppppppppppppppppppppppppp est de vous montrer des exemples de traces formelles entre les différents artefacts de votre application (des exigences jusqu'au code).
+Le but de ce TD/TP est de vous montrer des exemples de traces formelles entre les différents artefacts de votre application (des exigences jusqu'au code).
 
 .Les principaux artefacts qui nous intéressent en  R3-03 (Inspiré de https://github.com/xblanc33/QualiteDev/[ici])
 image::artifacts-r303.svg[width=120%,pdfwidth=60%,link="https://github.com/xblanc33/QualiteDev/"]
